deploy/overlays/production/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profanity-ui
  labels:
    app: profanity-ui
    environment: production
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: profanity-ui
