deploy/overlays/production/ui-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: profanity-ui-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main-gateway
      namespace: envoy-gateway-system
  hostnames:
    - developers.kr-filter.com
  rules:
    - backendRefs:
        - name: profanity-ui
          port: 80
